...
  const MusicDownloadPage({super.key});

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      appBar: AppBar(
        title: const Text('Download Music'),
      ),
      body: _MusicDownloadPage(),
    );
  }
}

...
