...
    if (event.link.isEmpty) {
      emit(state.copyWith(linkValidationError: () => 'link cannot be empty'));
      return;
    }
    final videoIdentifier = validateLink(event.link);
    if (videoIdentifier == null) {
      emit(state.copyWith(linkValidationError: () => 'invalid link'));
      return;
    }

    emit(state.copyWith(
      linkValidationError: () => '',
      progress: () =>
...
